# event-feed-app

./: .dockerignore  .env.example  .gitignore  ALERT_IMPLEMENTATION_SUMMARY.md  BACKFILL_SUMMARY.md  Dockerfile  Dockerfile.viewer  EARNINGS_GUIDANCE_ALERT_STRATEGY.md  QUICKSTART_ALERTS.md  README.md  REFACTORING_STRATEGY.md  analyze_guidance_feedback.py  assignments.csv  assignments_2025-09-02T130606Z.csv  assignments_2025-09-02T134509Z.csv  assignments_2025-09-02T135241Z.csv  assignments_2025-09-02T143635Z.csv  assignments_2025-09-02T151420Z.csv  assignments_2025-09-03T131144Z.csv  assignments_meta.json  assignments_with_categories.csv  build_labeling_pool.py  categories.csv  categorization_press_releases_TF_IDF.py  categorization_press_releases_combined_approach.py  categorization_press_releases_tfidf_embeddings.py  categorize_press_releases_sntc_trnsf.py  category_scores.csv  centroid_cosine_similarity.csv  cluster_assignments.csv  cluster_assignments_sample.csv  cluster_diagnostics.csv  cluster_mapping_template.json  cluster_summaries.csv  company_name_backfill_changes.csv  data.dvc  debug_missing_company_names.py  dedup_utils.py  deploy_viewer.sh  docker_build_push_deploy_to_gcloud.sh  (+52 more)
.cache/: guidance_events.csv  guidance_events_audit.csv
.dvc/: config
auth/: gmail_auth.py
core/: company_matcher.py  event_types.py  oltp_store.py
data/: companies.csv  generic_tokens.json  signals_guidance_change_events_date=2025-09-30_events_20250930_000000000000.parquet
deployment/: Dockerfile.consolidation  Dockerfile.viewer  deploy_consolidation.sh  deploy_viewer.sh  (+3 more)
(+487 files in other folders)
