[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-feed-app"                       # distribution name (can have hyphen)
version = "0.1.0"
description = "Core classification library for categorizing press releases (ingestion runs separately)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["nlp", "classification", "press-releases", "events", "mlops"]

# Minimal runtime deps for the classification lib (keep larger/env-specific pins in requirements*.txt)
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyarrow>=12",
  "gcsfs>=2024.1.0",
  "sentence-transformers>=2.2",
  "sentencepiece>=0.1.99",
  "langid>=1.1.6",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  # optional but handy:
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.4.0",
  "mypy>=1.8",
]
viz = ["matplotlib>=3.8"]

[project.scripts]
event-feed-run = "event_feed_app.pipeline.orchestrator:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["event_feed_app*"]
